src/objects/c2g__AnalysisFieldMappingSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Analysis Field Mappings (FF)</description>
    <fields>
        <fullName>c2g__CurrencyRevaluationField__c</fullName>
        <label>Currency Revaluation Summary</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__JournalField__c</fullName>
        <label>Journal Header</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__JournalLineItemField__c</fullName>
        <label>Journal Line Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseCreditNoteExpenseLineItemField__c</fullName>
        <label>Payable Credit Note Expense Line Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseCreditNoteField__c</fullName>
        <label>Payable Credit Note Header</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseCreditNoteLineItemField__c</fullName>
        <label>Payable Credit Note Line Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseInvoiceExpenseLineItemField__c</fullName>
        <label>Payable Invoice Expense Line Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseInvoiceField__c</fullName>
        <label>Payable Invoice Header</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PurchaseInvoiceLineItemField__c</fullName>
        <label>Payable Invoice Line Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SalesCreditNoteField__c</fullName>
        <label>Sales Credit Note Header</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SalesCreditNoteLineItemField__c</fullName>
        <label>Sales Credit Note Line Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoiceField__c</fullName>
        <label>Sales Invoice Header</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SalesInvoiceLineItemField__c</fullName>
        <label>Sales Invoice Line Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionField__c</fullName>
        <label>Transaction Header</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionLineItemField__c</fullName>
        <label>Transaction Line Item</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__UseHeaderValueAsLineDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Derive Transaction Line Item from Header</label>
        <type>Checkbox</type>
    </fields>
    <label>Analysis Field Mappings (FF)</label>
</CustomObject>